[gd_scene load_steps=5 format=3 uid="uid://c68qlaufk7088"]

[ext_resource type="Script" path="res://SCENES/options.gd" id="1_gnben"]
[ext_resource type="FontFile" uid="uid://iakbob10ex5" path="res://ASSETS/fonts/PixelOperator8-Bold.ttf" id="1_nr34r"]
[ext_resource type="FontFile" uid="uid://cnhcrcpgqgrq0" path="res://ASSETS/fonts/PixelOperator8.ttf" id="2_v7jg8"]
[ext_resource type="Script" path="res://SCENES/button.gd" id="4_7idbh"]

[node name="OPTIONS" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gnben")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = -14.0
offset_right = 1169.0
offset_bottom = 664.0
color = Color(0.370364, 0.370364, 0.370364, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 108.0
offset_top = 188.0
offset_right = 424.0
offset_bottom = 211.0
theme_override_fonts/font = ExtResource("2_v7jg8")
text = "Set Timer for the session"

[node name="TITLE" type="Label" parent="."]
layout_mode = 2
offset_left = 361.0
offset_top = 20.0
offset_right = 773.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("1_nr34r")
theme_override_font_sizes/font_size = 61
text = "OPTIONS"
uppercase = true

[node name="Label3" type="Label" parent="."]
layout_mode = 2
offset_left = 756.0
offset_top = 226.0
offset_right = 1072.0
offset_bottom = 249.0
theme_override_fonts/font = ExtResource("2_v7jg8")
text = "Volume"

[node name="Label2" type="Label" parent="."]
layout_mode = 2
offset_left = 350.0
offset_top = 484.0
offset_right = 460.0
offset_bottom = 507.0
theme_override_fonts/font = ExtResource("2_v7jg8")
text = "Standard"

[node name="TIMER_OPTIONS" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 211.0
offset_right = 464.0
offset_bottom = 597.0
theme_override_constants/separation = 65
alignment = 1

[node name="Button30" type="Button" parent="TIMER_OPTIONS"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nr34r")
theme_override_font_sizes/font_size = 31
text = "30 Seconds"
autowrap_mode = 2
script = ExtResource("4_7idbh")

[node name="Button45" type="Button" parent="TIMER_OPTIONS"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nr34r")
theme_override_font_sizes/font_size = 31
text = "45 Seconds"
autowrap_mode = 2

[node name="Button60" type="Button" parent="TIMER_OPTIONS"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nr34r")
theme_override_font_sizes/font_size = 31
text = "60 Seconds"
autowrap_mode = 2

[node name="Button90" type="Button" parent="TIMER_OPTIONS"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nr34r")
theme_override_font_sizes/font_size = 31
text = "90 Seconds"
autowrap_mode = 2

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 724.0
offset_top = 249.0
offset_right = 982.0
offset_bottom = 266.0
scale = Vector2(1.45304, 1.51203)
localize_numeral_system = false
value = 50.0
tick_count = 5
ticks_on_borders = true

[node name="BACK" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 808.0
offset_top = 476.0
offset_right = 1048.0
offset_bottom = 549.0

[node name="Button" type="Button" parent="BACK"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nr34r")
theme_override_font_sizes/font_size = 41
text = "BACK"

[connection signal="pressed" from="TIMER_OPTIONS/Button30" to="." method="_on_button_30_pressed"]
[connection signal="pressed" from="TIMER_OPTIONS/Button45" to="." method="_on_button_45_pressed"]
[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="BACK/Button" to="." method="_on_button_pressed"]
